<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestForm">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_txt"
        android:hint="@string/name_lbl"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/editText"
        android:hint="@string/phone_lbl"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:hint="@string/email_lbl"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText3"
        android:hint="@string/ID_lbl"
        android:inputType="number" />



    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText4"
        android:hint="@string/address_lbl"
        android:inputType="textPostalAddress" />


    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText5"
        android:hint="@string/town_lbl"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText6"
        android:hint="@string/zip_lbl"
        android:inputType="number" />

    <Spinner
        android:id="@+id/states_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText6"
        android:layout_toRightOf="@id/editText6"
        android:entries="@array/states_array"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText7"
        android:hint="@string/date_lbl"
        android:inputType="date" />
    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText8"
        android:hint="@string/income_lbl"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText9"
        android:hint="@string/moreInfoQuestion_lbl"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText10"
        android:hint="@string/volFirstName_lbl"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText11"
        android:hint="@string/volLastName_lbl"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText12"
        android:text="@string/submitBtn_lbl" />
    <!--android:onClick="onClick"-->

</RelativeLayout>