<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout tools:context=".GuestForm"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:id="@+id/title_txt"
        android:text="@string/vol_form"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/name_lbl"
        android:layout_below="@id/title_txt"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/editText"
        android:hint="@string/phone_lbl"
        android:inputType="phone" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editText3"
        android:hint="@string/email_lbl"
        android:layout_below="@id/editText2"
        android:inputType="textEmailAddress"/>


    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editText4"
        android:hint="@string/ID_lbl"
        android:layout_below="@id/editText3"
        android:inputType="number"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editText5"
        android:hint="@string/zip_lbl"
        android:layout_below="@id/editText4"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText5"
        android:hint="@string/address_lbl"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText6"
        android:text="@string/contact_method"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/contact_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText6"
        android:entries="@array/contact"
        android:layout_toRightOf="@id/textView2"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:text="@string/push_notif" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:text="@string/yes_to_push" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/done_button"
        android:text="@string/submitBtn_lbl"
        android:layout_below="@id/checkBox"/>
    <!--android:onClick="onClick"-->

</RelativeLayout>