<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/account_login"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#ddffffff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <EditText
                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="5dp"
                android:onClick="onClick"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/log_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:onClick="onClick"
                android:text="@string/sign_in"
                android:elevation="4dp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="2dp"
                android:onClick="onClick"
                android:text="@string/make_account"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:elevation="16dp"
        android:contentDescription="@string/photo"/>

</RelativeLayout>