<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:text="@string/sign_up"
        android:hint="@string/sign_up"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:elevation="16dp"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/sign_up_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:src="@drawable/veg_table"
        android:scaleType="centerCrop"
        />

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="64dp"
        android:background="#fff"
        android:layout_below="@+id/sign_up"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">


            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:layout_marginTop="10dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reenter_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/n_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/n_number"
                android:inputType="text"/>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_number"
                android:inputType="phone"/>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_below="@id/rel_layout"
        android:id="@+id/log_in_button"
        android:layout_width="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/sign_up_str"
        android:elevation="4dp"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>